--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
@@ -64,7 +64,7 @@ else
                                         <span class="bold-small">Distance:</span> <span class="distance-value">@vacancy.DistanceAsString</span> miles
                                         <a href="#" class="summary-style hide-nojs journey-trigger">Journey time</a>
                                         <div class="detail-content toggle-content hide-nojs">
-                                            <select class="form-control" class="form-control select-mode" name="">
+                                            <select class="form-control select-mode" name="">
                                                 <option value="DRIVING">Driving</option>
                                                 <option value="TRANSIT">Bus/Train</option>
                                                 <option value="WALKING">Walking</option>
