Fixing unit test

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
@@ -39,7 +39,7 @@ else
                         <ul class="list">
                             <li class="secondary-text">
                                 <span id="posted-date-@vacancy.Id">
-                                    @vacancy.EmployerName
+                                    (Added @vacancy.PostedDate.ToFriendlyDaysAgo()
                                 </span>
                             </li>
                             <li class="font-xsmall secondary-text">
