Tidied up styles for share application page. Needs more work.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
@@ -17,7 +17,7 @@
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
 
     <div>
-        <section>
+        <section class="sfa-section-bordered">
             <div class="hgroup text">
                 <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">
                     Select the applications you would like to share
@@ -27,42 +27,37 @@
         </section>
 
         <section class="sfa-no-bottom-margin" id="applicationsSection">
-
-            <section class="grid-row">
-                <ul class="applications-summary">
-                    <li>
-                        <figure class="data">
-                            <p class="count">@Model.NewApplicationsCount</p>
-                            <figcaption>
-                                <h2>New</h2></figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure class="data">
-                            <p class="count">@Model.InProgressApplicationsCount</p>
-                            <figcaption>
-                                <h2>In progress</h2></figcaption>
-                        </figure>
-                    </li>
+            <section class="sfa-medium-bottom-padding sfa-xlarge-top-padding sfa-section-bordered">
+                <div class="grid-row">
+                    <div class="column-one-quarter">
+                        <div class="data">
+                            <h2 class="bold-xlarge">@Model.NewApplicationsCount</h2>
+                            <p class="font-xsmall">New</p>
+                        </div>
+                    </div>
+                    <div class="column-one-quarter">
+                        <div class="data">
+                            <h2 class="bold-xlarge">@Model.InProgressApplicationsCount</h2>
+                            <p class="font-xsmall">In progress</p>
+                        </div>
+                    </div>
 
                     @if (Model.VacancyType != VacancyType.Traineeship)
                     {
-                        <li>
-                            <figure class="data">
-                                <p class="count">@Model.SuccessfulApplicationsCount</p>
-                                <figcaption>
-                                    <h2>Successful</h2></figcaption>
-                            </figure>
-                        </li>
-                        <li>
-                            <figure class="data">
-                                <p class="count">@Model.UnsuccessfulApplicationsCount</p>
-                                <figcaption>
-                                    <h2>Unsuccessful</h2></figcaption>
-                            </figure>
-                        </li>
+                        <div class="column-one-quarter">
+                            <div class="data">
+                                <h2 class="bold-xlarge">@Model.SuccessfulApplicationsCount</h2>
+                                <p class="font-xsmall">Successful</p>
+                            </div>
+                        </div>
+                        <div class="column-one-quarter">
+                            <div class="data">
+                                <h2 class="bold-xlarge">@Model.UnsuccessfulApplicationsCount</h2>
+                                <p class="font-xsmall">Unsuccessful</p>
+                            </div>
+                        </div>
                     }
-                </ul>
+                </div>
             </section>
 
             <table class="vert-top" id="applicationTable">
@@ -75,65 +70,65 @@
                     <col>
                 </colgroup>
                 <thead>
-                <tr>
-                    <th>
-                        <span class="font-black">Surname</span>
-                    </th>
-                    <th>
-                        <span class="font-black">First name</span>
-                    </th>
-                    <th>
-                        <span class="font-black">Applicant ID</span>
-                    </th>
-                    <th>
-                        <span class="font-black">Vacancy manager notes</span>
-                    </th>
-                    <th>
-                        <span class="font-black">Submitted</span>
-                    </th>
-                    <th>
-                        <span class="font-black">Status</span>
-                    </th>
-                    <th>
-                        <span class="font-black">Select application</span>
-                    </th>
-                </tr>
+                    <tr>
+                        <th>
+                            <span class="font-black">Surname</span>
+                        </th>
+                        <th>
+                            <span class="font-black">First name</span>
+                        </th>
+                        <th>
+                            <span class="font-black">Applicant ID</span>
+                        </th>
+                        <th>
+                            <span class="font-black">Vacancy manager notes</span>
+                        </th>
+                        <th>
+                            <span class="font-black">Submitted</span>
+                        </th>
+                        <th>
+                            <span class="font-black">Status</span>
+                        </th>
+                        <th>
+                            <span class="font-black">Select application</span>
+                        </th>
+                    </tr>
                 </thead>
                 <tbody>
-                @foreach (var applicationSummary in Model.ApplicationSummaries)
+                    @foreach (var applicationSummary in Model.ApplicationSummaries)
                 {
-                    <tr class="applicant">
-                        <td>
-                            <h4 class="applicant-name">@applicationSummary.LastName</h4>
-                        </td>
-                        <td>
-                            <h4 class="applicant-name">@applicationSummary.FirstName</h4>
-                        </td>
-                        <td>
-                            @applicationSummary.ApplicantID
-                        </td>
-                        <td>
-                            @{
-                                var notes = applicationSummary.Notes;
-                                if (notes != null && notes.Length > 20)
-                                {
-                                    notes = notes.Substring(0, 20) + "...";
+                        <tr class="applicant">
+                            <td>
+                                <h4 class="applicant-name">@applicationSummary.LastName</h4>
+                            </td>
+                            <td>
+                                <h4 class="applicant-name">@applicationSummary.FirstName</h4>
+                            </td>
+                            <td>
+                                @applicationSummary.ApplicantID
+                            </td>
+                            <td>
+                                @{
+                                    var notes = applicationSummary.Notes;
+                                    if (notes != null && notes.Length > 20)
+                                    {
+                                        notes = notes.Substring(0, 20) + "...";
+                                    }
                                 }
-                            }
-                            @notes
-                        </td>
-                        <td>@Html.DisplayFor(m => applicationSummary.DateApplied)</td>
-                        <td>
-                            @Html.Partial("_applicationStatus", applicationSummary.Status)
-                        </td>
-                        <td>
-                            @{
-                                var selected = Model.SelectedApplicationIds.Contains(applicationSummary.ApplicationId) ? "checked" : string.Empty;
-                            }
-                            <input type="checkbox" name="@Html.NameFor(m => m.SelectedApplicationIds)" value="@applicationSummary.ApplicationId" @selected/>
-                        </td>
-                    </tr>
-                }
+                                @notes
+                            </td>
+                            <td>@Html.DisplayFor(m => applicationSummary.DateApplied)</td>
+                            <td>
+                                @Html.Partial("_applicationStatus", applicationSummary.Status)
+                            </td>
+                            <td>
+                                @{
+                                    var selected = Model.SelectedApplicationIds.Contains(applicationSummary.ApplicationId) ? "checked" : string.Empty;
+                                }
+                                <input type="checkbox" name="@Html.NameFor(m => m.SelectedApplicationIds)" value="@applicationSummary.ApplicationId" @selected />
+                            </td>
+                        </tr>
+                                    }
                 </tbody>
             </table>
         </section>
@@ -142,7 +137,7 @@
             <p>Enter an email address for the person/organisation you would like to share this vacancy's application/s with.</p>
             <p>They'll receive an email containing a link to the application/s. The link will expire in 2 weeks (@DateTime.UtcNow.AddDays(14).ToString("d MMMM yyyy")).</p>
             @Html.FormTextFor(m => m.RecipientEmailAddress, controlHtmlAttributes: new { type = "text", size = 12, @class = "width-all-1-1 form-textarea-small" })
-            @Html.FormTextAreaFor(m => m.OptionalMessage, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;",data_val_length_max = "350" })
+            @Html.FormTextAreaFor(m => m.OptionalMessage, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;", data_val_length_max = "350" })
         </section>
 
         <section>
@@ -153,4 +148,4 @@
         </section>
 
     </div>
-}
+                                    }
