--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -111,15 +111,15 @@
 
             <div class="header-proposition">
                 <div class="content">
-                    <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+                    @*<a href="#proposition-links" class="js-header-toggle menu">Menu</a>*@
                     <nav id="proposition-menu">
                         <a id="proposition-name" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Recruit an apprentice</a>
 
-                        <ul id="proposition-links">
-                            @*<li><a href="https://www.gov.uk/service-manual/digital-by-default">Digital by Default Service Standard</a></li>
+                        @*<ul id="proposition-links">
+                            <li><a href="https://www.gov.uk/service-manual/digital-by-default">Digital by Default Service Standard</a></li>
                                 <li><a href="https://www.gov.uk/service-manual/start">Start using the manual</a></li>
-                                <li><a href="https://www.gov.uk/contact/govuk">Feedback</a></li>*@
-                        </ul>
+                                <li><a href="https://www.gov.uk/contact/govuk">Feedback</a></li>
+                        </ul>*@
                     </nav>
                 </div>
             </div>
