--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/EditWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/EditWage.cshtml
@@ -51,51 +51,82 @@
 
         <div class="blocklabel-single-container">
             <a name="@Html.NameFor(m => m.Type).ToString().ToLower()"></a>
-            <label class="form-label-bold" for="weekly-wage">Wage</label>
+            <!--<label id="wage-type-label" class="form-label-bold">Wage</label>-->
             <div class="form-group @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Type))">
                 @* ReSharper disable once Html.IdNotResolved *@
-                <label for="national-minimum-wage" class="block-label selection-button-radio vertically-stacked">
+                <!--<label id="national-minimum-wage-radio-label" for="national-minimum-wage" class="block-label selection-button-radio vertically-stacked">
                     @Html.RadioButtonFor(model => model.Classification, WageClassification.NationalMinimum, new {id = "national-minimum-wage", aria_controls = "wage-type-panel"})
                     National Minimum Wage
-                </label>
+                </label>-->
                 @* ReSharper disable once Html.IdNotResolved *@
-                <label for="apprenticeship-minimum-wage" class="block-label selection-button-radio vertically-stacked">
+                <!--<label id="apprenticeship-minimum-wage-radio-label" for="apprenticeship-minimum-wage" class="block-label selection-button-radio vertically-stacked">
                     @Html.RadioButtonFor(model => model.Classification, WageClassification.ApprenticeshipMinimum, new {id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel"})
                     National Minimum Wage for apprentices
-                </label>
+                </label>-->
                 @* ReSharper disable once Html.IdNotResolved *@
-                <label for="custom-wage" class="block-label selection-button-radio vertically-stacked" data-target="custom-wage-panel">
+                <label id="custom-wage-radio-label" for="custom-wage" class="block-label selection-button-radio vertically-stacked hidden" data-target="custom-wage-panel">
                     @Html.RadioButtonFor(model => model.Classification, WageClassification.Custom, new {id = "custom-wage", aria_controls = "wage-type-panel"})
                     Custom wage
                 </label>
                 <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
                     <div class="panel panel-border-narrow">
                         <fieldset class="form-group inline-fixed">
-                            @* ReSharper disable once Html.IdNotResolved *@
-                            <span class="clearfix">Select an option</span>
-                            <label for="custom-wage-fixed" class="block-label selection-button-radio" data-target="custom-wage-fixed-panel">
-                                @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Fixed, new {id = "custom-wage-fixed", aria_controls = "custom-wage-panel"})
-                                Fixed wage
-                            </label>
-                            @* ReSharper disable once Html.IdNotResolved *@
-                            <label for="custom-wage-range" class="block-label selection-button-radio" data-target="custom-wage-range-panel">
-                                @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Ranged, new {id = "custom-wage-range", aria_controls = "custom-wage-panel"})
-                                Wage range
-                            </label>
+                            @if (Model.ExistingWage.Type == WageType.Custom)
+                            {
+                                <span id="custom-wage-label" class="clearfix">Keep as fixed wage?</span>
+                                @* ReSharper disable once Html.IdNotResolved *@
+                                <label id="custom-wage-fixed-label" for="custom-wage-fixed" class="block-label selection-button-radio" data-target="custom-wage-fixed-panel">
+                                    @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Fixed, new {id = "custom-wage-fixed", aria_controls = "custom-wage-panel"})
+                                    <span id="custom-wage-fixed-label-text">Yes</span>
+                                </label>
+                                @* ReSharper disable once Html.IdNotResolved *@
+                                <label id="custom-wage-range-label" for="custom-wage-range" class="block-label selection-button-radio" data-target="custom-wage-range-panel">
+                                    @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Ranged, new {id = "custom-wage-range", aria_controls = "custom-wage-panel"})
+                                    <span id="custom-wage-range-label-text">No, change to wage range</span>
+                                </label>
+                            }
+                            @if (Model.ExistingWage.Type == WageType.CustomRange)
+                            {
+                                <span id="custom-wage-label" class="clearfix">Keep as wage range?</span>
+                                @* ReSharper disable once Html.IdNotResolved *@
+                                <label id="custom-wage-range-label" for="custom-wage-range" class="block-label selection-button-radio" data-target="custom-wage-range-panel">
+                                    @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
+                                    <span id="custom-wage-range-label-text">Yes</span>
+                                </label>
+                                @* ReSharper disable once Html.IdNotResolved *@
+                                <label id="custom-wage-fixed-label" for="custom-wage-fixed" class="block-label selection-button-radio" data-target="custom-wage-fixed-panel">
+                                    @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
+                                    <span id="custom-wage-fixed-label-text">No, change to fixed wage</span>
+                                </label>
+                            }
                             @Html.ValidationMessageFor(m => m.CustomType)
                         </fieldset>
                         <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
                             <fieldset class="nested-panel-2 form-group inline-fixed">
-                                <span class="clearfix">@Html.Label(WageViewModelMessages.AmountMessages.HelpText)</span>
+                                @if (Model.ExistingWage.Type == WageType.Custom)
+                                {
+                                    <span id="custom-wage-fixed-help-text" class="clearfix">Enter a new increased wage</span>
+                                }
+                                @if (Model.ExistingWage.Type == WageType.CustomRange)
+                                {
+                                    <span id="custom-wage-fixed-hint-text" class="clearfix form-hint">The wage must not be less than the minimum amount set in the original wage range</span>
+                                }
                                 £
                                 @Html.FormTextFor(m => m.Amount, containerHtmlAttributes: new {@class = "form-group-compound"}, labelHtmlAttributes: new {style = "Display: none"}, controlHtmlAttributes: new {@class = "form-control-large", type = "tel", size = 12})
                                 @Html.DropDownListFor(m => m.Unit, Model.WageUnits, new {@class = "form-control"})
                             </fieldset>
                         </div>
                         <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
-                            <fieldset class="nested-panel-2 form-group inline-fixed @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.AmountLowerBound))
-                                            @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.AmountUpperBound))">
-                                <span class="clearfix">@Html.Label(WageViewModelMessages.AmountRangeMessages.HelpText, new {@class = "form-hint"})</span>
+                            <fieldset class="nested-panel-2 form-group inline-fixed @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.AmountLowerBound)) @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.AmountUpperBound))">
+                                @if (Model.ExistingWage.Type == WageType.Custom)
+                                {
+                                    <span id="custom-wage-range-hint-text" class="clearfix form-hint">The minimum amount in the wage range must not be less than the original fixed wage</span>
+                                }
+                                @if (Model.ExistingWage.Type == WageType.CustomRange)
+                                {
+                                    <span id="custom-wage-range-help-text" class="clearfix">Enter increased wage range</span>
+                                    <span id="custom-wage-range-hint-text" class="clearfix form-hint">You can increase one or both of these figures</span>
+                                }
                                 £
                                 @Html.FormTextFor(m => m.AmountLowerBound, containerHtmlAttributes: new {@class = "form-group-compound"}, labelHtmlAttributes: new {style = "Display: none"}, controlHtmlAttributes: new {@class = "form-control-large", type = "tel", size = 12, placeholder = "min"})
                                 &nbsp;to&nbsp;£
